removal of thymeleaf

--- a/fragments/layout.html
+++ b/fragments/layout.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="en"></html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,10 +13,10 @@
     <header id="header" th:fragment="header">
         <nav class = "navbar">
             <div class="logo">
-                <a th:href="@{/home}">VET<span>CARE</span></a></div>
+                <a th:href="@{/home}">TEST<span>TEST</span></a></div>
             <ul class ="nav-menu">
                 <li class="basic-button"><a th:href="@{/about}">About</a></li>
-                <li class="basic-button"><a th:href="@{/education}">Education</a></li>
+                <li class="basic-button"><a th:href="@{/education}">FAQ</a></li>
                 <li class="basic-button"><a th:href="@{/faqenq}">Contact</a></li>
             </ul>
         </nav>
