--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,27 @@
-/* Header styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+  
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     display: flex;
-    background-color: #ffffff;
+    background-color: #5390ff;
     padding: 10px 45px;
+    margin: 0px;
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 1000;
     align-items: center;
     justify-content: space-between;
     justify-content: center;
+    min-height: 10%;
 }
 
 .navbar {
@@ -18,10 +30,231 @@ header {
     justify-content: space-between;
 }
 
+nav ul {
+    margin: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+nav ul li {
+    margin: 0 20px;
+}
+
+nav ul li img {
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 75px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: rgb(37, 44, 76);
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 10px 10px;
+    display: inline-block;
+    transition: background-color 0.3s;
+    white-space: nowrap;
+}
+
 .nav-menu {
-display: flex;
-flex: 1;
-list-style: none;
-padding: 0;
-margin: 0;
+    display: flex;
+    flex: 1;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.button a:hover {
+    background-color: #5390ff;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.container {
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    flex-direction: row;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.content1 {
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    min-height: 100vh;
+    background-color: rgb(147, 163, 238);
+    text-align: center;
+    align-items: center;
+    color: white;
+    padding-bottom: 3%;
+}
+
+.content1 h1 {
+    padding-bottom: 3%;
+}
+
+.content1 h2 {
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+.content1 p {
+    padding-right: 3%;
+    padding-left: 3%;
+    margin-bottom: 3%;
+}
+
+.content1 ul {
+    list-style-type: disc; 
+    padding-left: 10%;
+    text-align: left;
+    margin-left: 3%;
+    padding-bottom: 3%;
+    max-width: 90%;
+    flex-grow: 1;
+    flex-basis: 0;
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.content1 li {
+    list-style-type: inherit; /* Ensure list items follow the ul's style */
+}
+
+.content2 {
+    padding-top: 1%;
+    width: 45%;
+    color: rgb(255, 255, 255);
+    min-height: 100vh;
+    background-color: rgb(67, 87, 177);
+    text-align: center;
+}
+
+.content2 img {
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    width: 35vw;
+    height: auto;
+    border-radius: 10px;
+    background-color: white;
+    padding: 1%;
+    margin-top: 5%;
+}
+
+.booking {
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.booking h1 {
+    padding-bottom: 1%;
+}
+
+.booking p {
+    padding-bottom: 2%;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+
+.booking button {
+    border: 2px solid rgb(67, 87, 177);
+    border-radius: 3px;
+    padding: 30px;
+    background-color: #5390ff;
+    cursor: pointer;
+    /* text-decoration: underline; */
+    font-size: 20px;
+}
+
+.booking button:hover {
+    background-color: rgb(67, 87, 177);
+    color: rgb(255, 255, 255);
+    transition: 0.3s;
+    border: 2px solid #5390ff;
+}
+
+.fade-in-section {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    will-change: opacity, transform;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.fade-in-section.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+footer {
+    display: flex;
+    background-color: #bdcfef;
+    padding: 10px 45px;
+    margin: 0px;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    align-items: center;
+    justify-content: space-between;
+    justify-content: center;
+    min-height: 10%;
+}
+
+.footerbar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+footer ul {
+    margin: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+footer ul li {
+    margin: 0 20px;
+    font-size: 30px;
+    color: rgb(37, 44, 76);
+}
+
+footer ul li a i {
+    margin: 0 20px;
+    font-size: 40px;
+}
+
+footer ul li img {
+    background-position: center;
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 75px;
+}
+
+footer ul li a{
+    text-decoration: none;
+    color: rgb(37, 44, 76);
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 10px 10px;
+    display: inline-block;
+    transition: background-color 0.3s;
+    white-space: nowrap;
+}
+
+.footer-menu {
+    display: flex;
+    flex: 1;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
