--- a/fragments/header.html
+++ b/fragments/header.html
@@ -12,7 +12,7 @@
     <header id="header">
         <nav class = "navbar">
             <ul class ="nav-menu">
-                <li><img src="/images/Speaksavvy.jpg" alt="Logo"></li>
+                <li><img src="images/Speaksavvy.jpg" alt="Logo"></li>
                 <li class="button"><a th:href="@{/}">Home</a></li>
                 <li class="button"><a th:href="@{/}">About</a></li>
                 <li class="button"><a th:href="@{/}">FAQ</a></li>
