revision of home page

--- a/fragments/header.html
+++ b/fragments/header.html
@@ -11,8 +11,8 @@
 <body>
     <header id="header">
         <nav class = "navbar">
+            <img src="images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
-                <li><img src="images/Speaksavvy.jpg" alt="Logo"></li>
                 <li class="button"><a th:href="@{/}">Home</a></li>
                 <li class="button"><a th:href="@{/}">About</a></li>
                 <li class="button"><a th:href="@{/}">FAQ</a></li>
