--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: #caf0f8;
+}
   
 html, body {
     margin: 0;
@@ -14,18 +18,19 @@ header {
     background-color: #5390ff;
     padding: 10px 45px;
     margin: 0px;
-    width: 100%;
+    width: 80%;
     position: sticky;
     top: 0;
     z-index: 1000;
     align-items: center;
-    justify-content: space-between;
     justify-content: center;
     min-height: 10%;
+    margin: 0 auto;
 }
 
 .navbar {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
@@ -41,12 +46,12 @@ nav ul li {
     margin: 0 20px;
 }
 
-nav ul li img {
+nav img {
     background-position: center;
     background-attachment: scroll;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 75px;
+    height: 225px;
 }
 
 nav ul li a{
@@ -77,24 +82,28 @@ nav ul li a{
 
 .container {
     display: flex;
+    width: 80%;
+    margin: 0 auto;
     background-color: rgb(255, 255, 255);
     flex-direction: row;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .content1 {
+    padding-top: 1%;
     display: flex;
     flex-direction: column;
-    width: 55%;
+    width: 60%;
     min-height: 100vh;
-    background-color: rgb(147, 163, 238);
+    background-color: rgb(255, 255, 255);
     text-align: center;
     align-items: center;
-    color: white;
+    color: #5390ff;
     padding-bottom: 3%;
 }
 
 .content1 h1 {
+    padding-top: 2%;
     padding-bottom: 3%;
 }
 
@@ -104,8 +113,8 @@ nav ul li a{
 }
 
 .content1 p {
-    padding-right: 3%;
-    padding-left: 3%;
+    padding-right: 12%;
+    padding-left: 12%;
     margin-bottom: 3%;
 }
 
@@ -113,12 +122,13 @@ nav ul li a{
     list-style-type: disc; 
     padding-left: 10%;
     text-align: left;
-    margin-left: 3%;
+    margin-left: 12%;
+    margin-right: 12%;
     padding-bottom: 3%;
     max-width: 90%;
     flex-grow: 1;
     flex-basis: 0;
-    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid #5390ff;
 }
 
 .content1 li {
@@ -127,10 +137,10 @@ nav ul li a{
 
 .content2 {
     padding-top: 1%;
-    width: 45%;
-    color: rgb(255, 255, 255);
+    width: 40%;
+    color: #5390ff;
     min-height: 100vh;
-    background-color: rgb(67, 87, 177);
+    background-color: rgb(255, 255, 255);
     text-align: center;
 }
 
@@ -138,7 +148,7 @@ nav ul li a{
     background-position: center;
     background-attachment: scroll;
     background-repeat: no-repeat;
-    width: 35vw;
+    width: 20vw;
     height: auto;
     border-radius: 10px;
     background-color: white;
@@ -147,8 +157,12 @@ nav ul li a{
 }
 
 .booking {
+    padding-top: 1%;
+    padding-bottom: 2%;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .booking h1 {
@@ -157,8 +171,8 @@ nav ul li a{
 
 .booking p {
     padding-bottom: 2%;
-    padding-right: 3%;
-    padding-left: 3%;
+    padding-right: 20%;
+    padding-left: 20%;
 }
 
 .booking button {
@@ -183,7 +197,7 @@ nav ul li a{
     transform: translateY(20px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     will-change: opacity, transform;
-    margin: 50px auto;
+    padding: 10px auto;
     text-align: center;
 }
 
@@ -195,9 +209,9 @@ nav ul li a{
 footer {
     display: flex;
     background-color: #bdcfef;
-    padding: 10px 45px;
+    padding: 5px 0px;
     margin: 0px;
-    width: 100%;
+    width: 80%;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -205,6 +219,7 @@ footer {
     justify-content: space-between;
     justify-content: center;
     min-height: 10%;
+    margin: 0 auto;
 }
 
 .footerbar {
