--- a/fragments/header.html
+++ b/fragments/header.html
@@ -14,7 +14,7 @@
             <img src="images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
                 <li class="button"><a th:href="@{/}">Home</a></li>
-                <li class="button"><a th:href="/pages/about.html">About</a></li>
+                <li class="button"><a th:href="pages/about.html">About</a></li>
                 <li class="button"><a th:href="@{/}">FAQ</a></li>
                 <li class="button"><a th:href="@{/}">Contact</a></li>
             </ul>
