--- a/fragments/header.html
+++ b/fragments/header.html
@@ -11,7 +11,7 @@
 <body>
     <header id="header">
         <nav class = "navbar">
-            <img src="images/Speaksavvy.jpg" alt="Logo">
+            <img src="/images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
                 <li class="button"><a href="@{/}">Home</a></li>
                 <li class="button"><a href="pages/about.html">About</a></li>
