--- a/fragments/header.html
+++ b/fragments/header.html
@@ -13,10 +13,10 @@
         <nav class = "navbar">
             <img src="images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
-                <li class="button"><a href="@{/}">Home</a></li>
-                <li class="button"><a href="about.html">About</a></li>
-                <li class="button"><a href="@{/}">FAQ</a></li>
-                <li class="button"><a href="@{/}">Contact</a></li>
+                <li class="button"><a href="./">Home</a></li>
+                <li class="button"><a href="./about">About</a></li>
+                <li class="button"><a href="">FAQ</a></li>
+                <li class="button"><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
