--- a/fragments/header.html
+++ b/fragments/header.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Header</title>
 </head>
 
 <body>
     <header id="header">
         <nav class = "navbar">
-            <img src="images/Speaksavvy.jpg" alt="Logo">
+            <img src="./images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
                 <li class="button"><a href="./">Home</a></li>
                 <li class="button"><a href="./about">About Me</a></li>
