--- a/fragments/header.html
+++ b/fragments/header.html
@@ -14,7 +14,7 @@
             <img src="./images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
                 <li class="button"><a href="./">Home</a></li>
-                <li class="button"><a href="./about">About Me</a></li>
+                <li class="button"><a href="././about">About Me</a></li>
                 <li class="button"><a href="./services">Services</a></li>
                 <li class="button"><a href="./testimonials">Testimonials</a></li>
                 <li class="button"><a href="./faq">FAQ</a></li>
