header and footer changes

--- a/fragments/footer.html
+++ b/fragments/footer.html
@@ -13,11 +13,12 @@
     <footer id="footer">
         <footer class = "footerbar">
             <ul class ="footer-menu">
-                <li>SPEAK<span style="color:white">SAVVY</span></li>
+                <li><img src="./images/Speaksavvy-footer.jpg" alt="Logo"></li>
                 <li style="margin-left: auto;"><a href="https://www.facebook.com" target="_blank">
                     <i class="fab fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li style="padding-right: 5%;"><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
         </footer>
     </header>
