--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header {
     background-color: #5390ff;
     padding: 10px 45px;
     margin: 0px;
-    width: 80%;
+    width: 100%;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -56,7 +56,7 @@ nav img {
 
 nav ul li a{
     text-decoration: none;
-    color: rgb(37, 44, 76);
+    color: #373737;
     font-size: 18px;
     border-radius: 10px;
     padding: 10px 10px;
@@ -71,7 +71,7 @@ nav ul li a{
     list-style: none;
     padding: 0;
     margin: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .button a:hover {
@@ -82,11 +82,11 @@ nav ul li a{
 
 .container {
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     background-color: rgb(255, 255, 255);
     flex-direction: row;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .content1 {
@@ -94,8 +94,8 @@ nav ul li a{
     display: flex;
     flex-direction: column;
     width: 60%;
-    min-height: 100vh;
-    background-color: #caf0f8;
+    min-height: 70vh;
+    background-color: #ffffff;
     text-align: center;
     align-items: center;
     color: #5390ff;
@@ -139,8 +139,8 @@ nav ul li a{
     padding-top: 1%;
     width: 40%;
     color: #5390ff;
-    min-height: 100vh;
-    background-color: #caf0f8;
+    min-height: 70vh;
+    background-color: #ffffff;
     text-align: center;
 }
 
@@ -160,8 +160,8 @@ nav ul li a{
     padding-top: 1%;
     padding-bottom: 2%;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 80%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -208,10 +208,10 @@ nav ul li a{
 
 footer {
     display: flex;
-    background-color: #bdcfef;
+    background-color: #5390ff;
     padding: 5px 0px;
     margin: 0px;
-    width: 80%;
+    width: 100%;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -237,6 +237,7 @@ footer ul {
 
 footer ul li {
     margin: 0 20px;
+    margin-left: 5%;
     font-size: 30px;
     color: rgb(37, 44, 76);
 }
@@ -251,12 +252,12 @@ footer ul li img {
     background-attachment: scroll;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 75px;
+    height: 40px;
 }
 
 footer ul li a{
     text-decoration: none;
-    color: rgb(37, 44, 76);
+    color: #373737;
     font-size: 18px;
     border-radius: 10px;
     padding: 10px 10px;
@@ -271,5 +272,11 @@ footer ul li a{
     list-style: none;
     padding: 0;
     margin: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.content-wrapper {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.25); /* Box shadow effect */
+    width: 80%;
+    margin: 0 auto;
 }
