header page redirects

--- a/fragments/header.html
+++ b/fragments/header.html
@@ -14,11 +14,11 @@
             <img src="./images/Speaksavvy.jpg" alt="Logo">
             <ul class ="nav-menu">
                 <li class="button"><a href="./">Home</a></li>
-                <li class="button"><a href="./about">About Me</a></li>
-                <li class="button"><a href="./services">Services</a></li>
-                <li class="button"><a href="./testimonials">Testimonials</a></li>
-                <li class="button"><a href="./faq">FAQ</a></li>
-                <li class="button"><a href="./contact">Contact</a></li>
+                <li class="button"><a href="./about.html">About Me</a></li>
+                <li class="button"><a href="./services.html">Services</a></li>
+                <li class="button"><a href="./testimonials.html">Testimonials</a></li>
+                <li class="button"><a href="./faq.html">FAQ</a></li>
+                <li class="button"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
