--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ nav ul li a{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
     margin: 0 auto;
+    background-color: white;
 }
 
 .booking h1 {
@@ -279,4 +280,52 @@ footer ul li a{
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.25); /* Box shadow effect */
     width: 80%;
     margin: 0 auto;
+}
+
+.faq-item {
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ffffff;
+}
+
+.faq-question {
+    cursor: pointer;
+    font-size: 1.5em;
+    margin: 0;
+    color: #333;
+}
+
+.faq-answer {
+    margin-left: 12%;
+    margin-right: 12%;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+}
+
+.faq-answer.visible {
+    max-height: 500px; /* Adjust based on content height */
+}
+
+.login-button {
+    padding: 10px 40px;
+    background-color: #fff;
+    cursor: pointer;
+    border-radius: 40px;
+    text-decoration: none;
+    color: #000; 
+    display: inline-block; 
+    transition: background-color 0.3s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 190px;
+    border: none;
+}
+
+.contact-button {
+    border: 2px solid rgb(67, 87, 177);
+    border-radius: 3px;
+    padding: 30px;
+    background-color: #5390ff;
+    cursor: pointer;
+    /* text-decoration: underline; */
+    font-size: 20px;
 }
